@@ -24,9 +24,9 @@
 
 # Simply invoke AT_WITH_QT in your configure.ac. AT_WITH_QT can take
 # arguments which are documented in depth below. The default arguments are
-# equivalant to the default .pro file generated by qmake.
+# equivalent to the default .pro file generated by qmake.
 #
-# Invokving AT_WITH_QT will do the following:
+# Invoking AT_WITH_QT will do the following:
 #  - Add a --with-qt option to your configure
 #  - Find qmake, moc and uic and save them in the make variables $(QMAKE),
 #    $(MOC), $(UIC).
@@ -65,8 +65,8 @@
 # ------------------------------------------------
 # Enable Qt support and add an option --with-qt to the configure script.
 #
-# The QT_modules argument is optionnal and defines extra modules to enable or
-# disable (it's equivalant to the QT variable in .pro files). Modules can be
+# The QT_modules argument is optional and defines extra modules to enable or
+# disable (it's equivalent to the QT variable in .pro files). Modules can be
 # specified as follows:
 #
 # AT_WITH_QT   => No argument -> No QT value.
@@ -77,11 +77,11 @@
 # AT_WITH_QT([xml -gui +sql svg])  => QT += xml sql svg
 #                                     QT -= gui
 #
-# The QT_config argument is also optionnal and follows the same convention as
+# The QT_config argument is also optional and follows the same convention as
 # QT_modules. Instead of changing the QT variable, it changes the CONFIG
 # variable, which is used to tweak configuration and compiler options.
 #
-# The last argument, QT_misc (also optionnal) will be copied as-is the .pro
+# The last argument, QT_misc (also optional) will be copied as-is the .pro
 # file used to guess how to compile Qt apps. You may use it to further tweak
 # the build process of Qt apps if tweaking the QT or CONFIG variables isn't
 # enough for you.
@@ -216,7 +216,7 @@ m4_ifval([$3],
 
   # This sed filter is applied after an expression of the form: /^FOO.*=/!d;
   # It starts by removing the beginning of the line, removing references to
-  # SUBLIBS, removing unecessary whitespaces at the beginning, and prefixes
+  # SUBLIBS, removing unnecessary whitespaces at the beginning, and prefixes
   # all variable uses by QT_.
   qt_sed_filter='s///;
                  s/$(SUBLIBS)//g;
